frontend display